[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene6_parent_behavior.gd" type="Script" id=1]
[ext_resource path="res://audio/movement.wav" type="AudioStream" id=2]
[ext_resource path="res://main_reactor_scene6.gd" type="Script" id=3]
[ext_resource path="res://test_collision_mouse.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_vr_firstperson.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "audio"
length = 10.0
tracks/0/type = "audio"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0.1 )
}

[node name="parent" type="Spatial"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer"]
anims/audio = SubResource( 1 )

[node name="main_reactor_scene_6" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Latin Aido_95" type="Spatial" parent="main_reactor_scene_6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.10198, 5.96046e-08, -0.0804043 )

[node name="Cos Green_Towers_98" type="Spatial" parent="main_reactor_scene_6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36324, 0, 1.37749 )

[node name="Butterhead Blondine_109" type="Spatial" parent="main_reactor_scene_6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57069, 0, 1.44488 )

[node name="Crisp Angie_110" type="Spatial" parent="main_reactor_scene_6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0263974, -1.19209e-07, -1.46279 )

[node name="Cutting Ruby_239" type="Spatial" parent="main_reactor_scene_6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92972, 1.19209e-07, -0.836267 )

[node name="test_collision_mouse" parent="." instance=ExtResource( 4 )]

[node name="OVRFirstPerson" parent="." instance=ExtResource( 5 )]

[connection signal="animation_finished" from="AudioStreamPlayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="handRayCollided" from="OVRFirstPerson" to="." method="_on_OVRFirstPerson_handRayCollided"]
[connection signal="handRayExited" from="OVRFirstPerson" to="." method="_on_OVRFirstPerson_handRayExited"]
[connection signal="handRayPoint" from="OVRFirstPerson" to="." method="_on_OVRFirstPerson_handRayPoint"]
[connection signal="handSelected" from="OVRFirstPerson" to="." method="_on_OVRFirstPerson_handSelected"]
[connection signal="handTrigger" from="OVRFirstPerson" to="." method="_on_OVRFirstPerson_handTrigger"]
